--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,26 @@
     <include layout="@layout/content_main"/>
 
     <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="145dp"
+            android:layout_marginRight="16dp"
+            app:srcCompat="@android:drawable/ic_menu_delete"
+            android:backgroundTint="@color/deletionRed"/>
+
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_open"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="16dp"
+            app:srcCompat="@android:drawable/ic_menu_delete"
+            android:backgroundTint="@color/openGreen"/>
+
+    <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
