--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#4D4A4A</color>
+    <color name="colorPrimaryDark">#353333</color>
+    <color name="colorAccent">#436EB4</color>
+
+    <color name="deletionRed">#D12929</color>
+    <color name="openGreen">#288F3F</color>
 </resources>
