--- a/app/src/main/res/layout/result_activity.xml
+++ b/app/src/main/res/layout/result_activity.xml
@@ -14,6 +14,16 @@
             android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_delete_results"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="80dp"
+            android:layout_marginRight="16dp"
+            app:srcCompat="@drawable/ic_delete"
+            android:backgroundTint="@color/deletionRed"/>
+
+    <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_move"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
