--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="deletionRed">#D12929</color>
     <color name="openGreen">#288F3F</color>
+    <color name="purple">#853CC5</color>
 </resources>
