--- a/app/src/main/res/layout/destination_cell.xml
+++ b/app/src/main/res/layout/destination_cell.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context="com.example.instagramphotocropper.MainActivity">
+        tools:context="com.example.instagramphotocropper.activities.MainActivity">
 
     <ImageView
             android:id="@+id/imageView3"
