--- a/app/src/main/res/layout/destination_management_activity.xml
+++ b/app/src/main/res/layout/destination_management_activity.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".DestinationsManagementActivity">
+        tools:context=".activities.DestinationsManagementActivity">
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/destinationRecyclerView"
