--- a/app/src/main/res/layout/destination_cell.xml
+++ b/app/src/main/res/layout/destination_cell.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
@@ -28,4 +28,4 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
