--- a/app/src/main/res/layout/cell.xml
+++ b/app/src/main/res/layout/cell.xml
@@ -1,13 +1,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/containerView"
         android:orientation="horizontal"
-        android:background="#FFFFFF"
+        android:background="#ffffff"
         android:layout_width="140dp"
-        android:layout_height="200dp">
+        android:layout_height="140dp"
+        android:layout_margin="2dp">
+
     <ImageView
             android:id="@+id/img"
+            android:src="@drawable/add"
             android:adjustViewBounds="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:gravity="center"/>
+            android:layout_margin="0dp"
+            android:gravity="fill_horizontal"/>
 </LinearLayout>
